--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 <script>
     // ================= ตั้งค่าตรงนี้ =================
     const LIFF_ID = "2008873864-VbOip62x";  // ใส่ LIFF ID ของคุณ
-    const GAS_API = "
-https://script.googleusercontent.com/a/macros/chula.ac.th/echo?user_content_key=AehSKLhVo68IE_EhHDPIe4ztEB2CG3V-VlJ9EHou-9a03RfjVZHWtGZIrir9EzZI-scBd12JRHTbsMTugsT8r41ctj4K7RObrQuGN0ubC_0C6T93H9yjJP7KgEr9U-VXyrFjXE-FSJdVQeXFQ6lTaQr8DmQMpwZFMWXOoqirwTlRi_m_0qLumcNfpnLa8PrkV94iuMcZet1meSDD0V_4qGKpOkeXq0UDyPhT820POVru7IlUDDUAaGLg2oUvUYLmmfWrImRZAz0qghO5jqH2XXfe36jCjsu1BywN3VA01-ZyJyZ4mrGSkeE&lib=MIKknA779RXL8EPpEciDO5WAiIlk32G6E"; // ใส่ URL ที่ได้จากการ Deploy GAS (ส่วนที่ 1)
+    const GAS_API = "https://script.google.com/macros/s/AKfycbxm_8hlDz4fjyEhOWVe4V0_Wy9nGnBwKaVVUV3vZwcLlB3_bB_QCUXJbtna5fEBazBISg/exec"; // ใส่ URL ที่ได้จากการ Deploy GAS (ส่วนที่ 1)
     // ==============================================
 
     let userProfile = null;
@@ -118,3 +117,4 @@ https://script.googleusercontent.com/a/macros/chula.ac.th/echo?user_content_key=
 </body>
 
 </html>
+
