Revise index.html for New Year voting menu
Updated the voting menu page for the New Year 2569 with new title and content.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>โหวตเมนูอาหารกลางวัน</title>
+    <title>โหวตเมนูอาหารกลางวันปีใหม่ 2569</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -240,4 +240,5 @@
 </script>
 </body>
 </html>
+
 
