--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="bg-gray-50 min-h-screen pb-10">
 
     <div class="bg-orange-500 text-white p-4 shadow-md sticky top-0 z-50">
-        <h1 class="text-xl font-bold text-center">🍽️ โหวตเมนูอาหาร</h1>
+        <h1 class="text-xl font-bold text-center">🍽️ โหวตเมนูอาหารกลางวันปีใหม่ 2569</h1>
         <p class="text-sm text-center text-orange-100" id="user-display">กำลังโหลดข้อมูลผู้ใช้...</p>
     </div>
 
@@ -73,7 +73,8 @@
                     title: `สวัสดีคุณ ${profile.displayName}`,
                     html: `
                         <div class="text-left mt-2">
-                            <p class="mb-2 text-gray-600">ยินดีต้อนรับสู่ระบบโหวตอาหาร กรุณาอ่านกติกาดังนี้:</p>
+                            <p class="mb-2 text-gray-600">กรุณาโหวตอาหารงานปีใหม่ 2569</p>
+                            <p class="mb-2 text-gray-600">กรุณาอ่านกติกาดังนี้:</p>
                             <ul class="text-sm text-gray-700 space-y-2 list-disc pl-5 bg-orange-50 p-4 rounded-lg border border-orange-100">
                                 <li>สามารถเลือกรายการอาหารได้<br><b>มากสุด 2 รายการต่อประเภท</b></li>
                                 <li>ระบบจะ <b>ปิดให้โหวต</b> ในวันที่:<br><span class="text-red-500 font-bold">${data.closeTimeFormatted}</span></li>
@@ -276,6 +277,7 @@
 </script>
 </body>
 </html>
+
 
 
 
