Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
 
             <button onclick="submitVote()" class="w-full mt-6 bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-4 rounded-xl shadow-lg transition transform active:scale-95">
-                ยืนยันการโหวต
+                ยืนยันการ Vote
             </button>
         </div>
     </div>
@@ -278,6 +278,7 @@
 </script>
 </body>
 </html>
+
 
 
 
