Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             // --- ส่วนการส่งข้อมูล (เหมือนเดิม) ---
             const result = await Swal.fire({
                 title: 'ยืนยันการบันทึก?',
-                text: "ข้อมูลเก่าจะถูกทับด้วยข้อมูลใหม่นี้",
+                text: "ถ้าเคย Vote ไปแล้ว ข้อมูลเก่าจะถูกทับด้วยข้อมูลใหม่นี้",
                 icon: 'question',
                 showCancelButton: true,
                 confirmButtonText: 'ยืนยัน',
@@ -278,6 +278,7 @@
 </script>
 </body>
 </html>
+
 
 
 
