Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="bg-gray-50 min-h-screen pb-24">
 
     <div class="bg-gradient-to-r from-orange-500 to-red-500 text-white p-4 shadow-lg sticky top-0 z-40">
-        <h1 class="text-xl font-bold text-center">🍽️ Vote เมนูอาหารกลางวัน</h1>
+        <h1 class="text-xl font-bold text-center">🍽️ Vote เมนูอาหารกินเลี้ยงปีใหม่ 2569</h1>
         <p class="text-sm text-center text-orange-100 mt-1" id="user-display">กำลังโหลด...</p>
     </div>
 
@@ -118,6 +118,7 @@
                                     <li>ต้องเลือกอย่างน้อย <b>1 รายการ</b> ในทุกหมวด</li>
                                     <li>เลือกได้สูงสุด <b>2 รายการ</b> ต่อหมวด</li>
                                     <li>ปิด Vote: <span class="text-red-500 font-bold">${data.closeTimeFormatted || '-'}</span></li>
+                                    <li><b>ผล Vote</b> จะแสดงที่นี่หลังปิด Vote</li>
                                 </ul>
                             </div>
                         `,
@@ -343,3 +344,4 @@
     </script>
 </body>
 </html>
+
